--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <p> <h1>Cambio </h1> ipsum dolor sit amet consectetur adipisicing elit. 
+        <p> <h1>Cambio </h1> ectetur adipisicing elit. 
             Perferendis deserunt ullam hic ipsam excepturi, eum natus 
             dolorum alias! Odit doloremque voluptatum rerum minima 
             porro aspernatur tenetur tempore magnam voluptate ullam.
