--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
             dolorum alias! Odit doloremque voluptatum rerum minima 
             porro aspernatur tenetur tempore magnam voluptate ullam.
         <title>CAMBIO No 1</title>
-        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint est et eos sunt nam adipisci illum quae corporis ipsam 
+            distinctio culpa enim, perspiciatis nobis doloribus inventore saepe vero neque itaque.</p>
 
     </head>
     <body>
