--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
             porro aspernatur tenetur tempore magnam voluptate ullam.
         <title>CAMBIO No 1</title>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint est et eos sunt nam adipisci illum quae corporis ipsam 
-            distinctio culpa enim, perspiciatis nobis doloribus inventore saepe vero neque itaque.</p>
+            distinctio culpa enim, perspiciatis nobis doloribus inventore saepe vero neque itaque..</p>
+            
 
     </head>
     <body>
