--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <p> <h1>Cambio </h1> ectetur adipisicing elit. 
             Perferendis deserunt ullam hic ipsam excepturi, eum natus 
             dolorum alias! Odit doloremque voluptatum rerum minima 
-            porro aspernatur tenetur tempore magnam voluptate ullam.
+            porro aspernatur tenetur tempore magnam voluptate ullam.</p>
             
         <title>CAMBIO No 1</title>
 
